2000-12-01  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* list.[ch] (scm_c_memq):  Added as a fast C level alternative for
	scm_memq for the case that the list parameter is known to be a
	proper list.

	* goops.c (filter_cpl, remove_duplicate_slots, applicablep),
	goops.h (SCM_SUBCLASSP):  Use scm_c_memq if we are sure that we
	pass proper lists. 

2000-12-01  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* goops.c (scm_sys_compute_slots, scm_i_get_keyword,
	scm_get_keyword, scm_slot_ref_using_class,
	scm_slot_set_using_class_x):  Update the code to match guile's
	current style (e. g. using SCM_DEFINE, adding comments, removing
	unnecessary SCM_NIMP tests etc.).

2000-11-30  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	Thanks to Julian Satchell for the bug report:

	* coop-threads.c (scm_join_thread):  Check whether a thread is
	finished before trying to join it.

	* coop.c (coop_aborthelp, coop_join):  When a thread finishes, its
	stack base is not set to NULL any more.

2000-11-28  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* strop.c (scm_i_index):  Removed outdated comment.

2000-11-28  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* struct.c (scm_struct_ref, scm_struct_set_x), symbols.c
	(scm_intern_obarray_soft), symbols.h (SCM_ROUCHARS):  Eliminate
	use of SCM_SYMBOL_UCHARS by using chars instead of unsigned
	chars.

	(SCM_SYMBOL_UCHARS):  Removed.

2000-11-26  Gary Houston  <ghouston@arglist.com>

	* reimplementation of values, call-with-values as primitives:
	
	* values.c, values.h: new files.  use a struct to contain multiple
	values, similar to the previous Scheme-level implementation.
	* Makefile.am: add values.c, values.h, values.x.
	* continuations.c (continuation_apply): support R5RS multiple value
	continuations.
	* init.c: call scm_init_values.
	* struct.h: define SCM_SET_STRUCT_PRINTER.

2000-11-25  Gary Houston  <ghouston@arglist.com>

	* use an applicable SMOB to represent continuations, instead of a
	custom tc7 type.  This will make it easier to support R5RS